--- a/www/core.config.json
+++ b/www/core.config.json
@@ -5,6 +5,8 @@
 		"number": "25",
 		"theme": "Fractures in Time",
 		"location": "Estrel Hotel, Berlin, Germany",
+		"charity": "(TBA!)",
+		"goh": "(TBA!)",
 		"start": "2019-08-14",
 		"end": "2019-08-17",
 		"opening": "2019-08-14T17:00:00+02:00"
@@ -15,7 +17,7 @@
 		"pagesDirectory": "pages/",
 		"rootPage": "home",
 		"notFoundPage": "404",
-		"keywords": "",
+		"keywords": "Eurofurence, Eurofurence {number}, EF {number}, EF{number}",
 		"robots": "index, follow, noodp",
 		"externalTarget": "target=\"_blank\""
 	},
@@ -59,7 +61,7 @@
 			"category": "Website",
 			"uri": "home.php",
 			"title": "Welcome!",
-			"description": "Eurofurence {convention.number} will take place from {convention.start} - {convention.end}, {convention.year}. Eurofurence is Europe's largest annual gathering of the European furry community.",
+			"description": "Eurofurence {number} will take place from {start} - {end}, {year}. Eurofurence is Europe's largest annual gathering of the European furry community.",
 			"keywords": "",
 			"image": "",
 			"robots": ""
@@ -213,9 +215,23 @@
 			"category": "Program",
 			"uri": "charity.php",
 			"title": "Charity",
-			"description": "This year all donations, collections and more will go to support {convention.charity}.",
+			"description": "This year all donations, collections and more will go to support {charity}.",
 			"keywords": "Donations, Good cause, Benefaction",
 			"image": "charity.jpg",
+			"robots": ""
+		},
+
+		"goh":
+		{
+			"accessible": false,
+			"inMenu": false,
+			"menuText": "Guests of Honor",
+			"category": "Program",
+			"uri": "goh.php",
+			"title": "Guests of Honor",
+			"description": "Again we have some special people amongst us - our Guests of Honor. This year we have {goh}.",
+			"keywords": "Special guests, GOH, Guests of Honor",
+			"image": "",
 			"robots": ""
 		},
 		
