chore(config): :speech_balloon: Berlin -> Hamburg

--- a/www/core.config.json
+++ b/www/core.config.json
@@ -260,7 +260,7 @@
         "glympse": {
             "accessible": false,
             "category": "Membership",
-            "description": "Follow the surge of furries towards Berlin and back live on Glympse.",
+            "description": "Follow the surge of furries towards Hamburg and back live on Glympse.",
             "inMenu": false,
             "keywords": "Glympse, Live, Travel, Map",
             "menuText": "Glympse Map",
