chore(config): :rocket: set initial menu population

--- a/www/core.config.json
+++ b/www/core.config.json
@@ -111,7 +111,7 @@
             "accessible": true,
             "category": "Artists",
             "description": "A comprehensive guide on how to exhibit art in the Eurofurence Art Show.",
-            "inMenu": false,
+            "inMenu": true,
             "keywords": "Art Show, Guide, Limitations, Artwork, Display, Originals",
             "menuText": "Art Show Guide",
             "next": "artshow/bidding",
@@ -125,7 +125,7 @@
             "accessible": true,
             "category": "Artists",
             "description": "Rules and guidelines for art exhibited in the Eurofurence Art Show.",
-            "inMenu": false,
+            "inMenu": true,
             "keywords": "Art Show, Rules, Limitations, Artwork, Display, Originals",
             "menuText": "Art Show Rules",
             "next": "artshow/guide",
@@ -139,7 +139,7 @@
             "accessible": true,
             "category": "Artists",
             "description": "Find out how and when to sign-up in order to exhibit your art in the Eurofurence Art Show.",
-            "inMenu": false,
+            "inMenu": true,
             "keywords": "Art Show, Display, Sign-up, Originals",
             "menuText": "Art Show Signup",
             "next": "artshow/rules",
@@ -198,10 +198,10 @@
             "uri": "dealersden.php"
         },
         "dealersden/alley": {
-            "accessible": true,
+            "accessible": false,
             "category": "Artists",
             "description": "The Artist Alley is an open, first-come-first-serve alternative to the Dealers' Den.",
-            "inMenu": true,
+            "inMenu": false,
             "keywords": "Artist, Alley, Dealers' Den, Selling, Merchants, Dealers, Merchandise, Artwork, Sketches, Shirts, Shopping, Souvenirs",
             "menuText": "Artist Alley",
             "ogpImage": "",
@@ -321,7 +321,7 @@
             "accessible": true,
             "category": "Website",
             "description": "",
-            "inMenu": true,
+            "inMenu": false,
             "keywords": "",
             "menuText": "Imprint",
             "ogpImage": "",
