--- a/www/core.config.json
+++ b/www/core.config.json
@@ -385,6 +385,18 @@
             "title": "Jobs at Eurofurence",
             "uri": "jobs.php"
         },
+		"lostandfound": {
+			"accessible": true,
+			"inMenu": true,
+			"menuText": "Lost and Found",
+			"category": "Venue",
+			"uri": "lostandfound.php",
+			"title": "Lost and Found",
+			"description": "Browse all items that were lost and found during the convention, and handed to Security for safekeeping.",
+			"keywords": "lost and found, loss, lost, missing, items",
+			"ogpImage": "",
+			"robots": ""
+		},
         "nosecount": {
             "accessible": false,
             "category": "Membership",
