feat(CI/CD): :technologist: preview branch -> wwwtest

--- a/.github/workflows/deploy_wwwtest.yml
+++ b/.github/workflows/deploy_wwwtest.yml
@@ -2,7 +2,7 @@ name: deploy to wwwtest.eurofurence.org
 
 on:
   push:
-      branches: [main]
+      branches: [preview]
   workflow_dispatch:
 
 jobs:
